# TrendSignal

./: .gitignore  README.md
app/: .env.example  SYSTEM_PROMPT.md  __init__.py  analysis.py  api.py  pyproject.toml  requirements.txt  server.py
app/static/: index.html
deploy/: .dockerignore  Dockerfile  docker-compose.yml
deploy/k8s/: README.md  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/vm/: README.md  run-docker.sh
readme-assets/: INTERVIEW_CONCEPTS.md  README.md
